static/styles/subscriptions.css
/* ... */
.subscriber-list .subscriber_list_remove {
    display: inline-block;
}

.subscriber-list tbody:empty::after,
.subscriber-list:empty::after {
    content: "No subscribers to this stream.";
    display: block;

    text-align: center;
    color: #aaa;
}

.subscriber-list:empty {
    display: block;
    padding: 5px;
}

.subscriber-name,
.subscriber-email {
    padding: 5px;
}

.subscriber-email {
    margin-left: 20px;
    padding-right: 8px;
}

.subscriber_list_add {
    margin: 10px auto;
    text-align: center;
}

.subscriber_list_add .form-inline {
    margin-bottom: 0px;
}

.remove-subscriber-form {
    margin: 0px 0px 0px 0px;
}

#subscription-status {
    width: 200px;
    position: absolute;
    left: 50%;
    margin-left: -100px;
    bottom: 30px;
    text-align: center;
    border-radius: 2px;
}

#subscriptions h1 {
    font-size: 25px;
    font-weight: 300;
    padding-top: 40px;
}

#subscriptions .streams-icon {
    margin-right: 10px;
    font-size: 20px;
}

.change-stream-privacy {
    width: 100%;
    text-align: center;
}

.change-stream-privacy-feedback {
    display: none;
}

.subscriptions-overlay-bg {
    font: menu;
    position: fixed;
    top: 0;
    left: 0;
    width: 100vw;
    height: 100vh;
    background-color: rgba(20,20,20,0.7);
    color: #444;
}

.subscriptions-container {
    position: relative;
    height: 95%;
    background-color: #fff;
    border-radius: 4px;
    padding: 0px;
    width: 97%;
    overflow: hidden;
    max-width: 1200px;
    max-height: 1000px;
}

.subscriptions-header {
    padding: 12px;
    text-align: center;
    text-transform: uppercase;
    font-weight: 700;
    border-bottom: 1px solid #ddd;
}

.subscriptions-header .icon-vector-chevron-left {
    display: none;

    position: relative;
    transform: translate(-50px, 0px);
    opacity: 0;
    color: #aaa;

    float: left;
    padding: 5px 10px;

    cursor: pointer;

    transition: all 0.3s ease;
}

.subscriptions-header.slide-left .icon-vector-chevron-left {
    transform: translate(-0px, 0px);
    opacity: 1;
}

.subscriptions-header .subscriptions-title {
    display: inline-block;
    transition: all 0.3s ease;
    transform: translate(-13px, 0px);
}

.subscriptions-container .exit {
    font-weight: 400;
    position: absolute;
    top: 10px;
    right: 10px;
    color: #AAA;
    cursor: pointer;
}

.subscriptions-container .exit-sign {
    position: relative;
    top: 3px;
    margin-left: 3px;
    font-size: 1.7em;
    font-weight: 500;
    cursor: pointer;
}

.subscriptions-container .left,
.subscriptions-container .right {
    position: relative;
    display: inline-block;
    vertical-align: top;
    width: 50%;
    height: calc(100% - 45px);
    margin: 0px -2px;
}

.subscriptions-container .right {
    width: calc(50% + 1px);
}

.subscriptions-container .right .nothing-selected {
    display: block;
    margin-top: calc(45vh - 30px - 1em);
    text-align: center;
    font-size: 1em;
    color: #aaa;
    pointer-events: none;
    -webkit-font-smoothing: antialiased;
}

.subscriptions-container .left {
    border-right: 1px solid #ddd;
}

.subscriptions-container .left .search-container {
    padding: 6px 8px;
    border-bottom: 1px solid #ddd;
}

.subscriptions-container .right .display-type {
    padding: 6px;
    text-align: center;
    font-weight: 600;
    border-bottom: 1px solid #ddd;
}

.subscriptions-container .display-type.preview:after {
    content: "Preview";
}

.subscriptions-container .display-type.preferences:after {
    content: "Preferences";
}

.subscriptions-container .display-type .stream-info-title {
    display: none;
    font-size: 1em;
    line-height: 1;
    margin: 9px 0px;
    font-weight: 400;
    font-weight: 600;
    color: #444;
}

.subscriptions-container .right #preview_iframe {
    width: 100%;
    height: calc(100% - 45px);
    border: none;
    background-color: #FAFAFA;
    box-shadow: inset 0px 0px 50px rgba(0,0,0,0.5);
    background-image: url(../images/preview-loading.png);
    background-size: 150px auto;
    background-position: center center;
    background-repeat: no-repeat;
}

.subscriptions-container input[type=text].small {
    border: 1px solid #ccc;
    border-radius: 4px;
    padding: 3px;
    outline: none;
    color: #444;
    text-align: center;
}

.subscriptions-container input[type=text].small:focus {
    text-align: left;
}

.subscriptions-container input[type=text].small:valid {
    text-align: left;
}

#search_stream_name {
    width: 190px;
    padding: 3px 5px;
    margin: 2px 0px;
    display: inline-block;
    border-radius: 5px;
    box-shadow: none;
}

.create-stream-title {
    font-size: 1.5em;
    font-weight: 600;
}

.stream-creation-body section.block {
    margin-bottom: 20px;
}

.stream-creation-body #make-invite-only label span.icon-vector-globe {
    margin-left: 14px;
    margin-right: 10px;
}


.stream-creation-body #make-invite-only label span.icon-vector-lock {
    margin-left: 15px;
    margin-right: 11px;
}

.stream-creation-body #announce-new-stream div[class^="icon"] {
    margin-left: 3px;
    margin-right: 8px;
}

.streams-list {
    position: relative;
    overflow: auto;
    -webkit-overflow-scrolling: touch;
    height: calc(100% - 45px);
    width: 100%;
}

.stream-row {
    padding: 15px 10px;
    border-bottom: 1px solid #eee;
    cursor: pointer;
}

.stream-row.active {
    background-color: #eee;
}

.stream-row > div {
    display: inline-block;
    vertical-align: top;
}

.stream-row .check {
    width: 25px;
    height: 35px;
    position: relative;
    margin-right: 8px;
    background-size: 60% auto;
    background-repeat: no-repeat;
    background-position: center center;
}

.stream-row .check svg {
    fill: transparent;
    width: 70%;
    margin: 0% 15%;
}

.stream-row:hover .check:not(.checked) svg,
.stream-row.active:hover .check:not(.checked) svg {
    fill: #ddd;
}

.stream-row .checked svg {
    fill: #52c2af;
}
/* ... */

